--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </ul>
     <hr />
     <h2>Few of our projects:</h2>
-    <h3><a href="../4.3 HTML Porfolio Project/public/birthday-invite.html">Birthday-Invite</a></h3><br />
+    <h3><a href="../public/birthday-invite.html">Birthday-Invite</a></h3><br />
     <img src="./assets/images/birthday-invite.png" height=200 alt="Birthday-Invite" />
-    <h3><a href="../4.3 HTML Porfolio Project/public/movie-ranking.html">Movie-Ranking</a></h3>
+    <h3><a href="../public/movie-ranking.html">Movie-Ranking</a></h3>
     <img src="./assets/images/movie-ranking.png" height="200" alt="Movie-Ranking" />
 
     <a href="../4.3 HTML Porfolio Project/public/about.html">About Us</a>
